tests of building screen